fixed login logic, book-appointment front end

--- a/views/components/footer.html
+++ b/views/components/footer.html
@@ -2,11 +2,11 @@
     <div class="container footer-nav-container">
         <div class="row footer-row">
             <!-- Logo Section -->
-            <div class="col-12 col-md-3 text-center text-md-start mb-4 mb-md-0 footer-col">
+            <div class="col-12 col-md-3 text-center text-md-start mb-4 mb-md-0 footer-col logo-col">
                 <div class="footer-logo">
-                    <img src="../images/logo.png" alt="Dental Clinic Logo" class="container-fluid" />
+                    <img src="../images/footer-logo.png" alt="Dental Clinic Logo" class="container-fluid" />
                 </div>
-                <h2 class="text-center">WILERICH OPT. CLINIC</h1>
+                <h2 class="h2-footer">WILERICH OPT. CLINIC</h1>
             </div>
 
             <!-- Contact Information -->
@@ -26,10 +26,10 @@
                 <div class="footer-menu">
                     <ul class="list-unstyled">
                         <p class="fw-bold mt-3">Menu</p>
-                        <li><a href="index.php" class="text-decoration-none">Home</a></li>
-                        <li><a href="about.php" class="text-decoration-none">About</a></li>
-                        <li><a href="pricing.php" class="text-decoration-none">Pricing</a></li>
-                        <li><a href="appointment.php" class="text-decoration-none">Appointment</a></li>
+                        <li><a href="aboutUs.php" class="text-decoration-none">About Us</a></li>
+                        <li><a href="testimonials.php" class="text-decoration-none">Testimonials</a></li>
+                        <li><a href="contactUs.php" class="text-decoration-none">Contact Us</a></li>
+                        <li><a href="bookAppointment.php" class="text-decoration-none">Book An Appointment</a></li>
                     </ul>
                 </div>
             </div>
