--- a/views/components/branch-info.html
+++ b/views/components/branch-info.html
@@ -1,7 +1,7 @@
 <div class="branch-info-main-container">
-  <div class="branch-info-content">
-    <!-- Left Column: Branch Details -->
-    <div class="branch-info-container">
+  <div class="container-info container">
+  <div class="branch-info-content row">
+    <div class="branch-info-container col">
       <h1 class="branch-info-h1">Branch</h1>
       <div class="branch-info-details">
         <img
@@ -24,10 +24,9 @@
           </div>
         </div>
       </div>
-    
-    <!-- Right Column: Google Map -->
-    <div class="google-map">
-      <p>Google Map</p>
-    </div>
   </div>
+  <div class="col map-col">
+    <div id="map"></div>
+    </div>
+</div>
 </div>
