--- a/views/components/footer.html
+++ b/views/components/footer.html
@@ -13,10 +13,10 @@
             <div class="col-12 col-md-3  text-md-start mb-4 mb-md-0 footer-col">
                 <div class="footer-contact">
                     <ul class="list-unstyled">
-                        <p class="fw-bold">Contact Us</p>
+                        <p class="fw-bold footer-h1">Contact Us</p>
                         <li>(+63) 9939851256</li>
                         <li>qcu@gmail.com</li>
-                        <li>M2XM+XPV, Quirino Hwy, Novaliches, Quezon City, Metro Manila</li>
+                        <li>82-B Visayas Ave, Tandang Sora, Quezon City, Metro Manila, Philippines</li>
                     </ul>
                 </div>
             </div>
@@ -25,7 +25,7 @@
             <div class="col-12 col-md-3  text-md-start mb-4 mb-md-0 footer-col">
                 <div class="footer-menu">
                     <ul class="list-unstyled">
-                        <p class="fw-bold mt-3">Menu</p>
+                        <p class="fw-bold mt-3 footer-h1">Menu</p>
                         <li><a href="aboutUs.php" class="text-decoration-none">About Us</a></li>
                         <li><a href="testimonials.php" class="text-decoration-none">Testimonials</a></li>
                         <li><a href="contactUs.php" class="text-decoration-none">Contact Us</a></li>
@@ -38,7 +38,7 @@
             <div class="col-12 col-md-3  text-md-start footer-col">
                 <div class="footer-legal">
                     <ul class="list-unstyled">
-                        <p class="fw-bold mt-4">Legal Information</p>
+                        <p class="fw-bold mt-4 footer-h1">Legal Information</p>
                         <li><a href="privacy.php" class="text-decoration-none">Privacy Policy</a></li>
                         <li><a href="copyright.php" class="text-decoration-none">Copyright Policy</a></li>
                         <li><a href="terms.php" class="text-decoration-none">Terms of Service</a></li>
