--- a/views/components/clinic-hours.html
+++ b/views/components/clinic-hours.html
@@ -28,7 +28,7 @@
       </div>
       <div class="day">
         <span class="day-name">Sun</span>
-        <span class="time">Closed</span>
+        <span class="time">8:00 am - 6:30 pm</span>
       </div>
     </div>
   </div>
