final touch for now

--- a/views/components/bookingFailModal.html
+++ b/views/components/bookingFailModal.html
@@ -2,10 +2,12 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="errorModalLabel">Booking Error</h5>
+                <div class="modal-header-img-container">
+                    <img src="../images/alert-img.png" alt="alert" width="100px" height="100px"/>
+                    </div>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body text-center">
                 <p>There was an error with your booking. Please try again.</p>
             </div>
             <div class="modal-footer">
