--- a/views/components/logoutModal.html
+++ b/views/components/logoutModal.html
@@ -2,17 +2,19 @@
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="logOutModalLabel">Log Out</h5>
+          <div class="modal-header-img-container">
+            <img src="../images/alert-img.png" alt="alert" width="100px" height="100px"/>
+            </div>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <p>Are you sure you want to log out?</p>
+          <p class="text-center mt-3">Are you sure you want to log out?</p>
         </div>
         <div class="modal-footer">
           <!-- Cancel Button -->
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
           <!-- Confirm Logout Button -->
-          <a href="components/logout.php" class="btn btn-danger">Log Out</a>
+          <a href="components/logout.php" class="btn btn-danger">Logout <i class="bi bi-box-arrow-right"></i></a>
         </div>
       </div>
     </div>
