--- a/views/components/modalSuccess.html
+++ b/views/components/modalSuccess.html
@@ -3,14 +3,13 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="statusModalLabel">Appointment Status</h5>
+                <div class="modal-header-img-container">
+                    <img src="../images/success-img.png" alt="success" width="100px" height="100px"/>
+                    </div>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <p id="statusMessage">This is the status message.</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <p id="statusMessage" class="text-center">This is the status message.</p>
             </div>
         </div>
     </div>
