--- a/views/components/bookingSuccessModal.html
+++ b/views/components/bookingSuccessModal.html
@@ -3,14 +3,17 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="successModalLabel">Appointment Booking Success</h5>
+                <div class="modal-header-img-container">
+                    <img src="../images/success-img.png" alt="success" width="100px" height="100px"/>
+                    </div>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body text-center">
                 <p>Your appointment has been successfully booked.</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <a class="btn btn-primary see-my-book" href="myBook.php">See My Book</a>
+                <button type="button" class="btn btn-secondary mybook-close-btn" data-bs-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
