--- a/views/components/deleteConfirmationModal.html
+++ b/views/components/deleteConfirmationModal.html
@@ -2,17 +2,19 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="deleteModalLabel">Delete Testimonial</h5>
+                <div class="modal-header-img-container">
+                    <img src="../images/alert-img.png" alt="alert" width="100px" height="100px"/>
+                    </div>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body text-center">
                 Are you sure you want to delete this testimonial?
                 <!-- Hidden input to store the testimonial ID -->
                 <input type="hidden" id="deleteTestimonialId">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger" id="deleteTestimonialButton">Delete</button>
+                <button type="button" class="btn btn-danger" id="deleteTestimonialButton">Delete <i class="bi bi-trash"></i></button>
             </div>
         </div>
     </div>
