--- a/views/components/modalTestimonials.html
+++ b/views/components/modalTestimonials.html
@@ -4,23 +4,25 @@
         <div class="modal-content">
             <form id="editForm">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="editModalLabel">Edit Testimonial</h5>
+                    <div class="modal-header-img-container">
+                        <img src="../images/edit-img.png" alt="success" width="100px" height="100px"/>
+                        </div>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <input type="hidden" id="editId" name="id"> <!-- Hidden ID for the testimonial -->
                     <div class="mb-3">
-                        <label for="editName" class="form-label">Name</label>
-                        <input type="text" class="form-control" id="editName" name="name" required>
+                        <label for="editName" class="form-label edit-label-testimonials">Name</label>
+                        <input type="text" class="form-control edit-input-testimonials" id="editName" name="name" required>
                     </div>
                     <div class="mb-3">
-                        <label for="editTestimonial" class="form-label">Testimonial</label>
-                        <textarea class="form-control" id="editTestimonial" name="testimonial" rows="3" required></textarea>
+                        <label for="editTestimonial" class="form-label edit-label-testimonials">Testimonial</label>
+                        <textarea class="form-control edit-input-testimonials" id="editTestimonial" name="testimonial" rows="3" required></textarea>
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="submit" class="btn btn-success">Save Changes</button>
+                    <button type="button" class="btn btn-secondary mybook-close-btn" data-bs-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-warning save-btn">Save <i class="bi bi-floppy"></i></button>
                 </div>
             </form>
         </div>
