--- a/views/components/successfulModalTestimony.html
+++ b/views/components/successfulModalTestimony.html
@@ -2,10 +2,12 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="successModalLabel">Success!</h5>
+                <div class="modal-header-img-container">
+                    <img src="../images/success-img.png" alt="success" width="100px" height="100px"/>
+                    </div>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body text-center">
                 The testimonial has been deleted successfully.
             </div>
         
