--- a/views/components/updateTestimonialModal.html
+++ b/views/components/updateTestimonialModal.html
@@ -3,14 +3,13 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="successModalLabel">Success!</h5>
+                <div class="modal-header-img-container">
+                    <img src="../images/success-img.png" alt="success" width="100px" height="100px"/>
+                    </div>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body text-center">
                 Testimonial updated successfully!
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-success" data-bs-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
